--- a/README
+++ b/README
@@ -2,3 +2,8 @@ aoc-2023
 ========
 
 Solutions to Advent of Code 2024 Problems (https://adventofcode.com/2024).
+
+Languages used
+--------------
+
+Day 1   -   Rust
